# static-file-http-server

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  pre-install.js  start.js  uninstall.js
macros/: Cargo.toml
macros/src/: lib.rs
single-binary-producer/: Cargo.toml  README.md
single-binary-producer/src/: main.rs
src/: cli.rs  compile.rs  main.rs  server.rs
