[package]
name = "single-binary-producer"
version = "1.0.0"
edition = "2021"

[dependencies]

[dependencies.once_cell]
version = "1.17.1"
default-features = false
features = ["std"]

[dependencies.include_directory]
version = "0.1.1"
default-features = false

[dependencies.reqwest]
version = "0.11.14"
default-features = false

[dependencies.axum]
version = "0.6.6"
default-features = false
features = ["tokio", "http1"]

[dependencies.clap]
version = "4.1.4"
default-features = false
features = ["std", "color"]

[dependencies.tokio]
version = "1.25.0"
default-features = false
features = ["rt-multi-thread", "macros"]

[profile.release]
lto = true
opt-level = 3
incremental = true